--- a/MiddleWareDemo/Web.config
+++ b/MiddleWareDemo/Web.config
@@ -21,6 +21,9 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <!--<modules>
+      <add name="WcfReadEntityBodyModeWorkaroundModule" type="MiddleWareDemo.Modules.WcfReadEntityBodyModeWorkaroundModule, MiddleWareDemo" />
+    </modules>-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -55,5 +58,6 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="wcf:serviceHostingEnvironment:useClassicReadEntityBodyMode" value="true" />
   </appSettings>
 </configuration>
